WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24910
Fixes for Chromium.
https://bugs.webkit.org/show_bug.cgi?id=24910
Summary
Fixes for Chromium.
Dmitry Titov
Reported
2009-03-28 02:12:07 PDT
The latest merge of 41999:42026 broke Chromium. Need to reflect fixes in WebKit tree.
Attachments
Proposed patch
(2.78 KB, patch)
2009-03-28 02:54 PDT
,
Dmitry Titov
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Titov
Comment 1
2009-03-28 02:54:27 PDT
Created
attachment 29036
[details]
Proposed patch
Dimitri Glazkov (Google)
Comment 2
2009-03-28 08:22:21 PDT
Comment on
attachment 29036
[details]
Proposed patch Renaming of virtuals with default implementation strikes again!
Dmitry Titov
Comment 3
2009-03-28 11:44:39 PDT
Landed:
http://trac.webkit.org/changeset/42073
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug