2009-03-28  Dmitry Titov  <dimich@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24910
        Fixes for Chromium build.

        * bindings/v8/V8LazyEventListener.h: renamed IsInline() into virtualIsInline()
        * bindings/v8/custom/V8CustomEventListener.h: ditto.
        * dom/EventListener.h: used #if USE(JSC) to fix the build on non-JSC platform.



Canonical link: https://commits.webkit.org/34129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42073 268f45cc-cd09-0410-ab3c-d52691b4dbfc